docs: 补充 Java 代码注释